# strykelang

./: .gitignore  CREATORS.md  Cargo.toml  FUSEVM_MIGRATION_CHECKLIST.md  MAINTAINERS.md  PARITY_ROADMAP.md  README.md  ROADMAP.md  SPECIAL_VARIABLES.md  TODO.md  ZSH_CODEBASE_AUDIT.md  build.rs  tmp_jp130.pm
.githooks/: pre-commit
bench/: bench_array.fish  bench_array.jl  bench_array.lua  bench_array.pl  bench_array.py  bench_array.raku  bench_array.rb  bench_array.zsh  bench_fib.fish  bench_fib.jl  bench_fib.lua  bench_fib.pl  bench_fib.raku  bench_fib.rb  bench_fib.zsh  bench_hash.fish  bench_hash.jl  bench_hash.lua  bench_hash.pl  bench_hash.py  bench_hash.raku  bench_hash.rb  bench_hash.zsh  bench_loop.fish  bench_loop.jl  bench_loop.lua  bench_loop.pl  bench_loop.py  bench_loop.raku  bench_loop.rb  bench_loop.zsh  bench_map_grep.fish  bench_map_grep.jl  bench_map_grep.lua  bench_map_grep.pl  bench_map_grep.py  bench_map_grep.raku  bench_map_grep.rb  bench_map_grep.zsh  bench_pmap.pl  (+19 more)
benches/: cache_bench.rs  jit_compare.rs
completions/: _forge  _pe  _perlrs  _stryke
compsys/: AUDIT_COMPLETION_COVERAGE.md  AUDIT_GIT.md  AUDIT_ZSH_COMPSYS.md  AUDIT_ZSH_MORE_COMPLETIONS.md  Cargo.standalone.toml  Cargo.toml  README.md  arguments.rs  base.rs  cache.rs  compadd.rs  compcore.rs  compdef.rs  compinit.rs  completion.rs  compset.rs  computil.rs  describe.rs  files.rs  functions.rs  generate.rs  lib.rs  libmod.rmeta  library.rs  main.rs  matching.rs  menu.rs  shell_runner.rs  state.rs  system.rs  zle.rs  zpwr_colors.rs  zstyle.rs
compsys/bins/: bench_autoload.rs  menu_demo.rs
docs/: AI_PRIMITIVES.md  BUGS.md  CACHE_RKYV_MIGRATION.md  NAMESPACE_FUNCTIONS.md  PACKAGE_REGISTRY.md  ROADMAP.md  STRESS_TESTING.md  STYLE_GUIDE.md  TODO.md  WEB_FRAMEWORK.md  expect-feature-idea.md  hud-theme.js  index.html  killer-features-brainstorm.md  patent.md  reference.html  reference.tex  report.html  zshrs.html
editors/: coc-settings.json  forge.lua  forge.vim  helix-languages.toml  perlrs.lua  perlrs.vim  stryke.lua  stryke.vim  vscode-settings.json
examples/: a_star_no_interop.stk  activity_maintainer.stk  adam_optimizer_no_interop.stk  adaptive_parallelism.stk  adaptive_simpson_no_interop.stk  advanced_file_ops.stk  advanced_pipelines.stk  agent_become.stk  aho_corasick.stk  ai_agent_rag.stk  ai_collection_ops.stk  ai_data_pipeline.stk  ai_rag_simple.stk  ai_research_agent.stk  ai_session_memory.stk  ai_sql_generator.stk  algebraic_match.stk  algorithm_x_no_interop.stk  aliquot_sequences.stk  (+788 more)
fuzz/: Cargo.toml
fuzz/corpus/compile/: regex.stk  topic_chain.stk
fuzz/corpus/eval/: closure.stk  regex.stk
fuzz/corpus/pack/: n_template  repeat
fuzz/corpus/parse/: oursync.stk  topic_chain.stk
fuzz/fuzz_targets/: compile.rs  eval.rs  pack.rs  parse.rs
stryke_web/: Cargo.toml  README.md
stryke_web/src/: cmd_app.rs  cmd_build.rs  cmd_db.rs  cmd_extras.rs  cmd_generate.rs  cmd_new.rs  cmd_routes.rs  cmd_server.rs  lib.rs  main.rs  presets.rs  templates.rs  util.rs
stryke_web/templates/: controller.stk.tmpl  migration.stk.tmpl  model.stk.tmpl
stryke_web/templates/admin/: admin.css  admin_controller.stk  index.html.erb  table.html.erb
stryke_web/templates/api/: controller.stk
stryke_web/templates/app/: README.md.tmpl  gitignore.tmpl  stryke.toml.tmpl
stryke_web/templates/app/config/: application.stk.tmpl  database.toml.tmpl  routes.stk.tmpl
stryke_web/templates/app/controllers/: application_controller.stk.tmpl
stryke_web/templates/app/db/: seeds.stk.tmpl
stryke_web/templates/app/helpers/: application_helper.stk.tmpl
stryke_web/templates/app/models/: application_record.stk.tmpl
stryke_web/templates/app/views/layouts/: application.html.erb.tmpl
stryke_web/templates/auth/: create_users.stk  login.html.erb  sessions_controller.stk  signup.html.erb  user.stk  users_controller.stk
stryke_web/templates/devops/: Dockerfile  ci.yml  dockerignore  manifest.json  sw.js  wrapper_cargo.toml  wrapper_main.rs
stryke_web/templates/extras/: channel.stk  job.stk  mailer.stk
stryke_web/templates/themes/: bootstrap.css  cyberpunk.css  dark.css  layout.html.erb  layout_cyber.html.erb  matrix.css  pico.css  simple.css  synthwave.css  tailwind.css  terminal.css
stryke_web/templates/views/: _form.html.erb.tmpl  edit.html.erb.tmpl  index.html.erb.tmpl  new.html.erb.tmpl  show.html.erb.tmpl
zsh/: Cargo.standalone.toml  Cargo.toml  README.md
zsh/bins/: zshrs.rs
zsh/fish/: abbrs.rs  ast.rs  env_dispatch.rs  env_universal_common.rs  exec.rs  fd_monitor.rs  fs.rs  global_safety.rs  input_common.rs  io.rs  key.rs  panic.rs  parse_execution.rs  prelude.rs  topic_monitor.rs  tty_handoff.rs  wildcard.rs
zsh/fish/builtins/: abbr.rs  bind.rs  cd.rs  commandline.rs  fish_indent.rs  fish_key_reader.rs  history.rs  mod.rs  printf.rs  set.rs  set_color.rs  status.rs  wait.rs
zsh/fish/builtins/shared/: misc.rs
zsh/fish/builtins/string/: escape.rs  replace.rs  shorten.rs  unescape.rs
zsh/fish/env/: environment.rs  environment_impl.rs  mod.rs
zsh/fish/history/: file.rs
zsh/fish/reader/: history_search.rs  word_motion.rs
zsh/fish/threads/: threads.rs
zsh/fish/wutil/: mod.rs
zsh/src/: ast_opt.rs  attr.rs  cap.rs  clone.rs  compat.rs  compiler.rs  cond.rs  config.rs  context.rs  curses.rs  datetime.rs  db_gdbm.rs  exec.rs  fds.rs  files.rs  fish_features.rs  glob.rs  hashnameddir.rs  hashtable.rs  hist.rs  history.rs  hlgroup.rs  init.rs  input.rs  jobs.rs  ksh93.rs  langinfo.rs  lexer.rs  lib.rs  linklist.rs  log.rs  loop_port.rs  mapfile.rs  math.rs  mathfunc.rs  mem.rs  modentry.rs  module.rs  nearcolor.rs  newuser.rs  (+40 more)
zsh/src/zle/: bindings.rs  compcore_port.rs  complist_port.rs  compmatch_port.rs  compresult_port.rs  computil_port.rs  deltochar.rs  hist.rs  keymap.rs  keymaps.rs  main.rs  misc.rs  mod.rs  move_ops.rs  params.rs  refresh.rs  termquery.rs  textobjects.rs  thingy.rs  tricky.rs  utils.rs  vi.rs  widget.rs  widgets.rs  word.rs  zleparameter.rs
zsh/test_corpus/: docker-aliases.zsh  run_corpus.sh
zsh/tests/: zpwr_parse_test.rs  zshrs_shell.rs  ztst_runner.rs
(+23218 files in other folders)
