[package]
name = "strykelang"
version = "0.6.8"
edition = "2021"
description = "A highly parallel Perl 5 interpreter written in Rust"
license = "MIT"
authors = ["MenkeTechnologies"]
repository = "https://github.com/MenkeTechnologies/strykelang"
documentation = "https://docs.rs/strykelang"
# `cargo package` uses the git file list; `exclude` drops paths from the tarball.
# `vendor/perl` stays tracked and ships (e.g. `List/Util.pm`). `parity/` is local/CI only.
exclude = ["/parity/", "/.github/"]

[lib]
name = "stryke"

[[bin]]
name = "stryke"
path = "src/main.rs"

[[bin]]
name = "st"
path = "src/main.rs"

# Offline tool: regenerate `docs/reference.html` from the LSP doc strings.
# Not shipped to end users — runs locally + in CI before GitHub Pages deploy.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[dependencies]
rayon = "1.10"
regex = "1.11"
fancy-regex = "0.14"
clap = { version = "4", default-features = false, features = ["derive", "std", "help"] }
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6"
indexmap = "2"
thiserror = "2"
itoa = "1"
rand = "0.8"
caseless = "0.2"
libc = "0.2"
glob = "0.3"
ureq = "2.9"
memmap2 = "0.9"
notify = "6.1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
roxmltree = "0.20"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hmac = "0.12"
percent-encoding = "2"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
crc32fast = "1"
blake2 = "0.10"
blake3 = "1"
argon2 = "0.5"
bcrypt = "0.16"
scrypt = "0.11"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
statrs = "0.18"
sha3 = "0.10"
ripemd = "0.1"
siphasher = "1"
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
k256 = { version = "0.13", features = ["ecdsa"] }
hkdf = "0.12"
elliptic-curve = { version = "0.13", features = ["sec1"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
poly1305 = "0.8"
cbc = "0.1"
aes = "0.8"
base32 = "0.5"
totp-lite = "2"
qrcode = "0.14"
barcoders = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
brotli = "7"
xz2 = "0.1"
bzip2 = "0.5"
lz4_flex = "0.11"
tar = "0.4"
snap = "1"
weezl = "0.1"
zip = "2"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
murmur3 = "0.5"
md4 = "0.10"
blowfish = "0.9"
des = "0.8"
twofish = "0.7"
camellia = "0.1"
cast5 = "0.11"
salsa20 = "0.10"
crypto_secretbox = "0.1"
crypto_box = "0.9"
flate2 = "1"
zstd = "0.13"
chrono = "0.4"
chrono-tz = "0.10"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rustyline = "14"
cranelift-jit = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-native = "0.130"
cranelift-module = "0.130"
pcre2 = "0.2"
jaq-core = "3"
jaq-json = { version = "2", features = ["serde"] }
jaq-std = "3"
num-traits = "0.2"
inferno = { version = "0.12", default-features = false }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
unicode_names2 = "2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"
serde_json = "1"

[[bench]]
name = "jit_compare"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[build-dependencies]
regex = "1.11"
