[package]
name = "compsys"
version = "0.1.0"
edition = "2021"
description = "Zsh-compatible completion system for zshrs"
license = "MIT"

[lib]
name = "compsys"
path = "lib.rs"

[[bin]]
name = "compsys-test"
path = "main.rs"

[[bin]]
name = "menu-demo"
path = "bin/menu_demo.rs"

[[bin]]
name = "bench-autoload"
path = "bin/bench_autoload.rs"

[dependencies]
dirs = "5"
libc = "0.2"
rayon = "1.10"
regex-lite = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
unicode-width = "0.2"
