[package]
name = "zsh"
version = "0.1.0"
edition = "2021"
description = "Zsh interpreter and parser in Rust"
license = "MIT"
authors = ["MenkeTechnologies"]

[[bin]]
name = "zshrs"
path = "bin/zshrs.rs"

[dependencies]
ctrlc = "3"
atty = "0.2"
reedline = "0.47.0"
nu-ansi-term = "0.50"
compsys = { path = "../compsys" }
regex = "1.11"
glob = "0.3"
libc = "0.2"
indexmap = "2"
parking_lot = "0.12"
thiserror = "2"
nix = { version = "0.29", features = ["signal", "process", "term", "fs"] }
rusqlite = "0.32"
dirs = "5"
bitflags = "2"
tempfile = "3"
chrono = "0.4"
os_pipe = "1"
hostname = "0.4"
libm = "0.2"
rand = "0.8"
unicode-width = "0.2"
