[package]
name = "zsh"
version.workspace = true
edition.workspace = true
description = "Zsh interpreter and parser in Rust"
license.workspace = true
authors.workspace = true

[[bin]]
name = "zshrs"
path = "bins/zshrs.rs"

[dependencies]
ctrlc = "3"
atty = "0.2"
reedline = "0.47.0"
nu-ansi-term = "0.50"
compsys = { path = "../compsys", version = "0.8.14" }
fusevm = { path = "../fusevm" }
regex = "1.11"
glob = "0.3"
libc = "0.2"
indexmap = "2"
parking_lot = "0.12"
thiserror = "2"
nix = { version = "0.29", features = ["signal", "process", "term", "fs"] }
rusqlite = "0.32"
dirs = "5"
bitflags = "2"
tempfile = "3"
chrono = "0.4"
os_pipe = "1"
hostname = "0.4"
libm = "0.2"
rand = "0.8"
unicode-width = "0.2"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
# Profiling — gated behind feature flags, zero cost when off
tracing-chrome = "0.7"
tracing-flame = { version = "0.2", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false, features = ["http-listener"] }
walkdir = "2.5.0"
crossbeam-channel = "0.5.15"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[features]
default = []
gdbm = []
libcap = []
## Enable `--profile` CLI flag: writes chrome://tracing JSON to $HOME/.cache/zshrs/trace.json
## Build: cargo build -p zsh --features profiling
profiling = []
## Enable flamegraph output: writes folded stacks to $HOME/.cache/zshrs/flame.folded
## Build: cargo build -p zsh --features flamegraph
flamegraph = ["tracing-flame"]
## Enable Prometheus metrics endpoint on localhost:9090/metrics
## Build: cargo build -p zsh --features prometheus
prometheus = ["metrics", "metrics-exporter-prometheus"]

[dev-dependencies]
tempfile = "3"
